KTitleWidget: restore size policies to Preferred & vertical centering

cb0f60c54e092a647ccf3831a0bc8ab08d79a3b8 made the internal QGridLayout the
main layout. This as unintended side-effect changed two things:
* KTitleWidget now follows the QLayout::SetFixedSize size constraint set
  on that grid layout
* any content will be aligned at the top if there is more space available
  then needed

Wrapping the grid layout again into a QVBoxLayout and making this the
main layout restores the old default KTitleWidget size policies, which also
resemble those of a plain QLabel.

BUG: 488319